// Copyright 2023 LiveKit, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package main

import (
	"context"
	"fmt"
	"log"
	"time"

	"github.com/livekit/psrpc/examples/pubsub/protocol/broadcast"
	proto "github.com/livekit/psrpc/examples/pubsub/protocol/protocol"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

// PushManagerClient Push-Manager gRPC å®¢æˆ·ç«¯
type PushManagerClient struct {
	conn   *grpc.ClientConn
	client broadcast.PushServerClient
}

// NewPushManagerClient åˆ›å»º Push-Manager å®¢æˆ·ç«¯
func NewPushManagerClient(addr string) (*PushManagerClient, error) {
	log.Printf("ğŸ”Œ è¿æ¥åˆ° Push-Manager: %s", addr)

	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	conn, err := grpc.DialContext(ctx, addr,
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithBlock(),
	)
	if err != nil {
		return nil, fmt.Errorf("è¿æ¥å¤±è´¥: %w", err)
	}

	log.Printf("âœ… gRPC è¿æ¥æˆåŠŸ")

	return &PushManagerClient{
		conn:   conn,
		client: broadcast.NewPushServerClient(conn),
	}, nil
}

// BroadcastToRoom å¹¿æ’­æ¶ˆæ¯åˆ°æˆ¿é—´
func (c *PushManagerClient) BroadcastToRoom(roomID, message string) error {
	log.Printf("ğŸ“¢ å¹¿æ’­æ¶ˆæ¯åˆ°æˆ¿é—´: %s", roomID)
	log.Printf("   å†…å®¹: %s", message)

	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	// æ„é€ æ¶ˆæ¯ Proto
	protoMsg := &proto.Proto{
		Ver:    1,
		Op:     2, // OP_SEND_MSG
		Seq:    1,
		Roomid: roomID,
		Body:   []byte(message),
	}

	req := &broadcast.BroadCastReq{
		Proto: protoMsg,
	}

	resp, err := c.client.Broadcast(ctx, req)
	if err != nil {
		return fmt.Errorf("å¹¿æ’­å¤±è´¥: %w", err)
	}

	log.Printf("âœ… å¹¿æ’­æˆåŠŸ")
	log.Printf("   å“åº”: code=%s, msg=%s", resp.Code, resp.Msg)

	return nil
}

// PushToUser æ¨é€æ¶ˆæ¯ç»™æŒ‡å®šç”¨æˆ·ï¼ˆæš‚æœªå®ç°ï¼‰
func (c *PushManagerClient) PushToUser(userID, message string) error {
	log.Printf("ğŸ“¤ æ¨é€æ¶ˆæ¯ç»™ç”¨æˆ·: %s", userID)
	log.Printf("   å†…å®¹: %s", message)
	log.Printf("âš ï¸  PushToUser åŠŸèƒ½æš‚æœªå®ç°")
	return nil
}

// GetRoomStats è·å–æˆ¿é—´ç»Ÿè®¡ä¿¡æ¯ï¼ˆæš‚æœªå®ç°ï¼‰
func (c *PushManagerClient) GetRoomStats() error {
	log.Printf("ğŸ“Š è·å–ç³»ç»Ÿç»Ÿè®¡")
	log.Printf("âš ï¸  GetRoomStats åŠŸèƒ½æš‚æœªå®ç°")
	return nil
}

// Close å…³é—­è¿æ¥
func (c *PushManagerClient) Close() error {
	log.Printf("ğŸ‘‹ å…³é—­ gRPC è¿æ¥")
	return c.conn.Close()
}

