// Copyright 2023 LiveKit, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package main

import (
	"flag"
	"log"
	"os"
	"os/signal"
	"syscall"
	"time"
)

func main() {
	// å‘½ä»¤è¡Œå‚æ•°
	mode := flag.String("mode", "both", "è¿è¡Œæ¨¡å¼: ws (WebSocketå®¢æˆ·ç«¯), grpc (gRPCå®¢æˆ·ç«¯), both (ä¸¤è€…éƒ½è¿è¡Œ)")
	connectNodeAddr := flag.String("connect-node", "localhost:8083", "Connect-Node åœ°å€ (host:port)")
	pushManagerAddr := flag.String("push-manager", "localhost:50053", "Push-Manager gRPC åœ°å€")
	userID := flag.String("user-id", "user-001", "ç”¨æˆ· ID")
	userName := flag.String("user-name", "æµ‹è¯•ç”¨æˆ·", "ç”¨æˆ·åç§°")
	roomID := flag.String("room-id", "room-001", "æˆ¿é—´ ID")
	message := flag.String("message", "Hello from Biz-Server!", "è¦å¹¿æ’­çš„æ¶ˆæ¯")
	flag.Parse()

	log.Printf("====================================")
	log.Printf("   PubSub ä¸šåŠ¡æœåŠ¡å™¨å®¢æˆ·ç«¯ç¤ºä¾‹")
	log.Printf("====================================")
	log.Printf("")
	log.Printf("è¿è¡Œæ¨¡å¼: %s", *mode)
	log.Printf("")

	// ä¿¡å·å¤„ç†
	sigChan := make(chan os.Signal, 1)
	signal.Notify(sigChan, syscall.SIGINT, syscall.SIGTERM)

	switch *mode {
	case "ws":
		runWebSocketClient(*connectNodeAddr, *userID, *userName, *roomID, sigChan)
	case "grpc":
		runGRPCClient(*pushManagerAddr, *roomID, *userID, *message)
	case "both":
		runBothClients(*connectNodeAddr, *pushManagerAddr, *userID, *userName, *roomID, *message, sigChan)
	default:
		log.Fatalf("âŒ æœªçŸ¥æ¨¡å¼: %s (æ”¯æŒ: ws, grpc, both)", *mode)
	}
}

// runWebSocketClient è¿è¡Œ Getty WebSocket å®¢æˆ·ç«¯
func runWebSocketClient(addr, userID, userName, roomID string, sigChan chan os.Signal) {
	log.Printf("ğŸš€ å¯åŠ¨ Getty WebSocket å®¢æˆ·ç«¯...")
	log.Printf("")

	// åˆ›å»º Getty WebSocket å®¢æˆ·ç«¯
	wsClient, err := NewGettyWebSocketClient(addr, userID, userName, roomID)
	if err != nil {
		log.Fatalf("âŒ åˆ›å»º WebSocket å®¢æˆ·ç«¯å¤±è´¥: %v", err)
	}
	defer wsClient.Close()

	// åŠ å…¥æˆ¿é—´
	if err := wsClient.JoinRoom(); err != nil {
		log.Fatalf("âŒ åŠ å…¥æˆ¿é—´å¤±è´¥: %v", err)
	}

	log.Printf("")
	log.Printf("âœ… WebSocket å®¢æˆ·ç«¯è¿è¡Œä¸­...")
	log.Printf("ğŸ“ æŒ‰ Ctrl+C é€€å‡º")
	log.Printf("")

	// ç­‰å¾…é€€å‡ºä¿¡å·
	<-sigChan
	log.Printf("")
	log.Printf("ğŸ‘‹ æ”¶åˆ°é€€å‡ºä¿¡å·ï¼Œå…³é—­å®¢æˆ·ç«¯...")
}

// runGRPCClient è¿è¡Œ gRPC å®¢æˆ·ç«¯
func runGRPCClient(addr, roomID, userID, message string) {
	log.Printf("ğŸš€ å¯åŠ¨ gRPC å®¢æˆ·ç«¯...")
	log.Printf("")

	// åˆ›å»º gRPC å®¢æˆ·ç«¯
	grpcClient, err := NewPushManagerClient(addr)
	if err != nil {
		log.Fatalf("âŒ åˆ›å»º gRPC å®¢æˆ·ç«¯å¤±è´¥: %v", err)
	}
	defer grpcClient.Close()

	log.Printf("")
	log.Printf("ğŸ“‹ æ‰§è¡Œæ“ä½œ:")
	log.Printf("")

	// 1. å¹¿æ’­æ¶ˆæ¯åˆ°æˆ¿é—´
	log.Printf("1ï¸âƒ£  å¹¿æ’­æ¶ˆæ¯åˆ°æˆ¿é—´...")
	if err := grpcClient.BroadcastToRoom(roomID, message); err != nil {
		log.Printf("âŒ å¹¿æ’­å¤±è´¥: %v", err)
	}
	log.Printf("")

	// 2. æ¨é€æ¶ˆæ¯ç»™æŒ‡å®šç”¨æˆ·
	log.Printf("2ï¸âƒ£  æ¨é€æ¶ˆæ¯ç»™ç”¨æˆ·...")
	if err := grpcClient.PushToUser(userID, message); err != nil {
		log.Printf("âŒ æ¨é€å¤±è´¥: %v", err)
	}
	log.Printf("")

	// 3. è·å–ç³»ç»Ÿç»Ÿè®¡
	log.Printf("3ï¸âƒ£  è·å–ç³»ç»Ÿç»Ÿè®¡...")
	if err := grpcClient.GetRoomStats(); err != nil {
		log.Printf("âŒ è·å–ç»Ÿè®¡å¤±è´¥: %v", err)
	}
	log.Printf("")

	log.Printf("âœ… æ‰€æœ‰æ“ä½œå®Œæˆ")
}

// runBothClients åŒæ—¶è¿è¡Œä¸¤ä¸ªå®¢æˆ·ç«¯
func runBothClients(wsAddr, grpcAddr, userID, userName, roomID, message string, sigChan chan os.Signal) {
	log.Printf("ğŸš€ å¯åŠ¨ Getty WebSocket å’Œ gRPC å®¢æˆ·ç«¯...")
	log.Printf("")

	// 1. åˆ›å»º Getty WebSocket å®¢æˆ·ç«¯
	log.Printf("1ï¸âƒ£  åˆ›å»º Getty WebSocket å®¢æˆ·ç«¯...")
	wsClient, err := NewGettyWebSocketClient(wsAddr, userID, userName, roomID)
	if err != nil {
		log.Fatalf("âŒ åˆ›å»º WebSocket å®¢æˆ·ç«¯å¤±è´¥: %v", err)
	}
	defer wsClient.Close()

	// åŠ å…¥æˆ¿é—´
	if err := wsClient.JoinRoom(); err != nil {
		log.Fatalf("âŒ åŠ å…¥æˆ¿é—´å¤±è´¥: %v", err)
	}

	log.Printf("")
	log.Printf("âœ… WebSocket å®¢æˆ·ç«¯å·²è¿æ¥å¹¶ç›‘å¬æ¶ˆæ¯")
	log.Printf("")

	// ç­‰å¾…ä¸€ä¼šå„¿ï¼Œç¡®ä¿è¿æ¥ç¨³å®š
	time.Sleep(3 * time.Second)

	// 2. åˆ›å»º gRPC å®¢æˆ·ç«¯å¹¶å‘é€å¹¿æ’­
	log.Printf("2ï¸âƒ£  åˆ›å»º gRPC å®¢æˆ·ç«¯...")
	grpcClient, err := NewPushManagerClient(grpcAddr)
	if err != nil {
		log.Fatalf("âŒ åˆ›å»º gRPC å®¢æˆ·ç«¯å¤±è´¥: %v", err)
	}
	defer grpcClient.Close()

	log.Printf("")
	log.Printf("3ï¸âƒ£  é€šè¿‡ gRPC å¹¿æ’­æ¶ˆæ¯...")
	if err := grpcClient.BroadcastToRoom(roomID, message); err != nil {
		log.Printf("âŒ å¹¿æ’­å¤±è´¥: %v", err)
	}

	log.Printf("")
	log.Printf("âœ… æ¶ˆæ¯å·²å‘é€ï¼ŒWebSocket å®¢æˆ·ç«¯åº”è¯¥ä¼šæ”¶åˆ°æ¨é€")
	log.Printf("")
	log.Printf("ğŸ“ æŒ‰ Ctrl+C é€€å‡º")
	log.Printf("")

	// ç­‰å¾…é€€å‡ºä¿¡å·
	<-sigChan
	log.Printf("")
	log.Printf("ğŸ‘‹ æ”¶åˆ°é€€å‡ºä¿¡å·ï¼Œå…³é—­å®¢æˆ·ç«¯...")
}
