// Copyright 2023 LiveKit, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package main

import (
	"context"
	"log"
	getty "github.com/AlexStocks/getty/transport"
	"github.com/livekit/psrpc/examples/pubsub/pkg"
	"github.com/livekit/psrpc/examples/pubsub/protocol/controller"
	"github.com/livekit/psrpc/examples/pubsub/protocol/push"
	"github.com/zhenjl/cityhash"
	"time"

	"github.com/livekit/psrpc/examples/pubsub/pkg/config"
	"github.com/livekit/psrpc/examples/pubsub/pkg/metrics"
)

// ConnectNodeServer è¿æ¥èŠ‚ç‚¹æœåŠ¡å™¨
type ConnectNodeServer struct {
	push.UnimplementedCometServer

	// åŸºç¡€é…ç½®
	nodeID      string
	nodeAddress string
	config      *config.Config

	// gRPC å®¢æˆ·ç«¯ï¼ˆç”¨äºè°ƒç”¨ Controllerï¼‰
	controllerClient controller.ControllerServiceClient

	// Metrics
	metrics *metrics.MetricsCollector

	// accept round store
	round *Round

	sessionMap map[*getty.Session]*clientProtoSession

	buckets []*Bucket

	bucketIdx uint32

	// æˆ¿é—´åŒæ­¥åœæ­¢ä¿¡å·
	stopRoomSync chan struct{}
}

// NewConnectNodeServer åˆ›å»ºè¿æ¥èŠ‚ç‚¹æœåŠ¡å™¨
func NewConnectNodeServer(
	nodeID, nodeAddress string,
	cfg *config.Config,
	controllerClient controller.ControllerServiceClient,
	metricsCollector *metrics.MetricsCollector,
) *ConnectNodeServer {
	server := &ConnectNodeServer{
		nodeID:           nodeID,
		nodeAddress:      nodeAddress,
		config:           cfg,
		controllerClient: controllerClient,
		metrics:          metricsCollector,
		buckets:          make([]*Bucket, cfg.Bucket.Size),
		bucketIdx:        uint32(cfg.Bucket.Size),
		round:            NewRound(cfg),
		stopRoomSync:     make(chan struct{}),
	}

	for i := 0; i < cfg.Bucket.Size; i++ {
		server.buckets[i] = NewBucket(cfg.Bucket)
	}

	server.nodeID = cfg.Server.ID

	go server.onlineproc()

	return server
}

func (s *ConnectNodeServer) Buckets() []*Bucket {
	return s.buckets
}

func (s *ConnectNodeServer) Bucket(clientID string) *Bucket {

	idx := cityhash.CityHash32([]byte(clientID), uint32(len(clientID))) % s.bucketIdx

	return s.buckets[idx]
}

func (s *ConnectNodeServer) onlineproc() {
	for {
		var (
			allRoomsCount map[string]int32
			//err           error
		)

		roomCount := make(map[string]int32)

		for _, bucket := range s.buckets {
			for roomID, count := range bucket.RoomsCount() {
				roomCount[roomID] += count
			}
		}

		for _, bucket := range s.buckets {
			bucket.UpRoomsCount(allRoomsCount)
		}

		time.Sleep(time.Second * 10)
	}

}

// ========== RPC æ–¹æ³•å®ç° ==========

// å‡è®¾ userId æ˜¯å…¨å±€ æœåŠ¡ç«¯é¢å‘
func (s *ConnectNodeServer) PushMsg(ctx context.Context, req *push.PushMsgReq) (reply *push.PushMsgReply, err error) {
	if len(req.Keys) == 0 || req.Proto == nil {
		return nil, pkg.ErrPushMsgArg
	}

	for _, key := range req.Keys {
		bucket := s.Bucket(key)

		if bucket == nil {
			continue
		}

		if channel := bucket.Channel(key); channel != nil {
			if !channel.NeedPush(req.ProtoOp) {
				continue
			}

			if err = channel.Push(req.Proto); err != nil {
				return
			}
		}

	}

	return &push.PushMsgReply{}, nil

}

func (s *ConnectNodeServer) Broadcast(ctx context.Context, req *push.BroadcastReq) (*push.BroadcastReply, error) {
	log.Printf("ğŸ“¡ [ConnectNodeServer] æ”¶åˆ° Broadcast gRPC è¯·æ±‚: op=%d, roomId=%s", req.ProtoOp, req.GetProto().Roomid)
	if req.Proto == nil {
		return nil, pkg.ErrBroadCastArg
	}

	go func() {
		log.Printf("ğŸš€ [ConnectNodeServer] å¼€å§‹å¹¿æ’­åˆ° %d ä¸ª buckets", len(s.Buckets()))
		for i, bucket := range s.Buckets() {
			channelCount := bucket.ChannelCount()
			log.Printf("ğŸ“¤ [ConnectNodeServer] å¹¿æ’­åˆ° bucket[%d], channels=%d", i, channelCount)
			bucket.Broadcast(req.GetProto(), req.ProtoOp)
			if req.Speed > 0 {
				t := bucket.ChannelCount() / int(req.Speed)
				time.Sleep(time.Duration(t) * time.Second)
			}
		}
		log.Printf("âœ… [ConnectNodeServer] Broadcast å®Œæˆ")
	}()
	return &push.BroadcastReply{}, nil
}

func (s *ConnectNodeServer) BroadcastRoom(ctx context.Context, req *push.BroadcastRoomReq) (*push.BroadcastRoomReply, error) {
	log.Printf("ğŸ¯ [ConnectNodeServer] æ”¶åˆ° BroadcastRoom gRPC è¯·æ±‚: roomID=%s", req.RoomID)
	if req.Proto == nil || req.RoomID == "" {
		log.Printf("âŒ [ConnectNodeServer] å‚æ•°æ— æ•ˆ: roomID=%s, proto=%v", req.RoomID, req.Proto)
		return nil, pkg.ErrBroadCastRoomArg
	}
	log.Printf("ğŸ”„ [ConnectNodeServer] åˆ†å‘åˆ° %d ä¸ª buckets", len(s.Buckets()))
	for i, bucket := range s.Buckets() {
		log.Printf("ğŸ”„ [ConnectNodeServer] è°ƒç”¨ bucket[%d].BroadcastRoom", i)
		bucket.BroadcastRoom(req)
	}
	log.Printf("âœ… [ConnectNodeServer] BroadcastRoom å¤„ç†å®Œæˆ")
	return &push.BroadcastRoomReply{}, nil
}

func (s *ConnectNodeServer) Rooms(ctx context.Context, req *push.RoomsReq) (*push.RoomsReply, error) {
	var (
		roomIds = make(map[string]bool)
	)
	for _, bucket := range s.Buckets() {
		for roomID := range bucket.Rooms() {
			roomIds[roomID] = true
		}
	}
	return &push.RoomsReply{Rooms: roomIds}, nil
}
