// Copyright 2023 LiveKit, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package main

import (
	"context"
	"fmt"
	"github.com/livekit/psrpc/examples/pubsub/protocol/push"
	"log"
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"

	"github.com/livekit/psrpc/examples/pubsub/pkg/config"
	"github.com/livekit/psrpc/examples/pubsub/pkg/etcd"
	"github.com/livekit/psrpc/examples/pubsub/pkg/metrics"
	"github.com/livekit/psrpc/examples/pubsub/protocol/broadcast"
)

// BroadcastClient å¹¿æ’­å®¢æˆ·ç«¯åŒ…è£…
type BroadcastClient struct {
	serverID      string
	client        push.CometClient
	broadcastChan chan *push.BroadcastReq
	routineSize   uint64
	conn          *grpc.ClientConn

	ctx    context.Context
	cancel context.CancelFunc
}

// PushManagerServer Push-Manager æœåŠ¡å™¨
type PushManagerServer struct {
	broadcast.UnimplementedPushServerServer

	// åŸºç¡€é…ç½®
	managerID string
	config    *config.Config

	// ETCD æœåŠ¡å‘ç°
	discovery *etcd.ServiceDiscovery

	// Connect-Node å®¢æˆ·ç«¯æ± ï¼ˆnodeID -> *BroadcastClientï¼‰
	broadCastClientMap map[string]*BroadcastClient

	// Metrics
	metrics *metrics.MetricsCollector

	// ä¸Šä¸‹æ–‡æ§åˆ¶
	ctx    context.Context
	cancel context.CancelFunc
}

// NewPushManagerServer åˆ›å»º Push-Manager æœåŠ¡å™¨
func NewPushManagerServer(
	managerID string,
	cfg *config.Config,
	discovery *etcd.ServiceDiscovery,
	metricsCollector *metrics.MetricsCollector,
) *PushManagerServer {
	ctx, cancel := context.WithCancel(context.Background())

	pms := &PushManagerServer{
		managerID:          managerID,
		config:             cfg,
		discovery:          discovery,
		broadCastClientMap: make(map[string]*BroadcastClient),
		metrics:            metricsCollector,
		ctx:                ctx,
		cancel:             cancel,
	}

	return pms
}

// WatchConnectNodes ğŸ”¥ ç›‘å¬ Connect-Node æœåŠ¡å‘ç°äº‹ä»¶ï¼ˆäº‹ä»¶é©±åŠ¨ï¼‰
func (s *PushManagerServer) WatchConnectNodes(ctx context.Context) {
	log.Printf("ğŸ” [Push-Manager] å¼€å§‹ç›‘å¬ Connect-Node äº‹ä»¶...\n")

	// é¦–å…ˆè·å–å·²æœ‰çš„èŠ‚ç‚¹
	instances, _ := s.discovery.GetEndpoints()

	s.createBroadcastClient(instances)

	// ğŸ”¥ è·å–äº‹ä»¶é€šé“ï¼Œç›‘å¬ ETCD äº‹ä»¶
	eventChan := s.discovery.GetEventChan()

	go func() {
		for {
			select {
			case <-ctx.Done():
				log.Printf("âš ï¸  [Push-Manager] åœæ­¢ç›‘å¬ Connect-Node äº‹ä»¶\n")
				s.cleanupAllClients()
				return

			case event, ok := <-eventChan:
				if !ok {
					// äº‹ä»¶é€šé“å·²å…³é—­
					return
				}
				log.Printf("etcd discovery clients %s", event)

				endpoints, err := s.discovery.GetEndpoints()

				if err != nil {
					log.Printf("get endpoints error ")
					continue
				}

				s.createBroadcastClient(endpoints)

			}
		}
	}()

}

// createBroadcastClient ä¸ºæŒ‡å®šçš„ Connect-Node åˆ›å»ºå¹¿æ’­å®¢æˆ·ç«¯
func (s *PushManagerServer) createBroadcastClient(instances []string) {
	// ä¿ç•™å·²å­˜åœ¨çš„å®¢æˆ·ç«¯ï¼Œåªåˆ›å»ºæ–°çš„
	comets := make(map[string]*BroadcastClient)
	
	// å…ˆå¤åˆ¶å·²å­˜åœ¨çš„å®¢æˆ·ç«¯
	for k, v := range s.broadCastClientMap {
		comets[k] = v
	}
	
	// å¤„ç†æ‰€æœ‰å®ä¾‹
	for _, instance := range instances {
		nodeID := fmt.Sprintf("connect-node-%s", instance)
		
		// å¦‚æœå·²å­˜åœ¨ï¼Œè·³è¿‡
		if _, exists := comets[nodeID]; exists {
			log.Printf("âœ… [Push-Manager] Connect-Node å®¢æˆ·ç«¯å·²å­˜åœ¨: %s (%s)\n", nodeID, instance)
			continue
		}

		log.Printf("ğŸ”— [Push-Manager] åˆ›å»º Connect-Node å®¢æˆ·ç«¯: %s (%s)\n", nodeID, instance)

		ctx, cancel := context.WithCancel(s.ctx)

		// å»ºç«‹ gRPC è¿æ¥
		conn, err := grpc.DialContext(
			ctx,
			instance,
			grpc.WithTransportCredentials(insecure.NewCredentials()),
			grpc.WithDefaultCallOptions(grpc.MaxCallRecvMsgSize(100*1024*1024)),
		)
		if err != nil {
			log.Printf("âŒ [Push-Manager] è¿æ¥åˆ° %s å¤±è´¥: %v\n", instance, err)
			cancel()
			continue // ç»§ç»­å¤„ç†ä¸‹ä¸€ä¸ªèŠ‚ç‚¹ï¼Œè€Œä¸æ˜¯ç›´æ¥è¿”å›
		}

		client := push.NewCometClient(conn)
		routineSize := uint64(10) // å·¥ä½œåç¨‹æ•°é‡

		broadcastClient := &BroadcastClient{
			serverID:      nodeID,
			client:        client,
			broadcastChan: make(chan *push.BroadcastReq, 1000), // ç¼“å†²é˜Ÿåˆ—
			routineSize:   routineSize,
			conn:          conn,
			ctx:           ctx,
			cancel:        cancel,
		}

		// å¯åŠ¨å·¥ä½œåç¨‹å¤„ç†æ¶ˆæ¯
		for i := uint64(0); i < routineSize; i++ {
			go broadcastClient.runWorker(i)
		}

		comets[nodeID] = broadcastClient
	}

	// æ›´æ–°å®¢æˆ·ç«¯æ˜ å°„
	s.broadCastClientMap = comets

	log.Printf("âœ… [Push-Manager] Connect-Node å®¢æˆ·ç«¯åˆ›å»ºæˆåŠŸï¼Œå…± %d ä¸ªèŠ‚ç‚¹\n", len(comets))
}

// runWorker å·¥ä½œåç¨‹ï¼šä»é˜Ÿåˆ—ä¸­å–å‡ºæ¶ˆæ¯å¹¶å‘é€
func (bc *BroadcastClient) runWorker(workerID uint64) {
	log.Printf("ğŸ‘· [Worker-%s-%d] å·²å¯åŠ¨\n", bc.serverID, workerID)

	defer func() {
		log.Printf("ğŸ‘· [Worker-%s-%d] å·²åœæ­¢\n", bc.serverID, workerID)
	}()

	for {
		select {
		case <-bc.ctx.Done():
			return
		case req, ok := <-bc.broadcastChan:
			if !ok {
				// é€šé“å·²å…³é—­
				return
			}
			// å‘é€æ¶ˆæ¯åˆ° Connect-Node
			ctx, cancel := context.WithTimeout(bc.ctx, 5*time.Second)
			_, err := bc.client.Broadcast(ctx, req)
			cancel()

			if err != nil {
				log.Printf("âŒ [Worker-%s-%d] æ¨é€æ¶ˆæ¯å¤±è´¥: %v\n", bc.serverID, workerID, err)
			} else {
				log.Printf("âœ… [Worker-%s-%d] æ¶ˆæ¯æ¨é€æˆåŠŸ\n", bc.serverID, workerID)
			}
		}
	}
}

// EnqueueBroadcastMsg å°†æ¶ˆæ¯åŠ å…¥åˆ°æ‰€æœ‰ Connect-Node çš„é˜Ÿåˆ—ä¸­
func (s *PushManagerServer) EnqueueBroadcastMsg(req *broadcast.BroadCastReq) {

	var args = push.BroadcastReq{
		Proto:   req.Proto,
		ProtoOp: req.Proto.Op, // è®¾ç½® ProtoOpï¼Œç”¨äºå®¢æˆ·ç«¯çš„ NeedPush æ£€æŸ¥
	}

	for nodeID, client := range s.broadCastClientMap {
		select {
		case client.broadcastChan <- &args:
			log.Printf("ğŸ“¤ [Push-Manager] æ¶ˆæ¯å·²åŠ å…¥é˜Ÿåˆ—: %s, op=%d\n", nodeID, args.ProtoOp)
		default:
			log.Printf("âš ï¸  [Push-Manager] èŠ‚ç‚¹ %s çš„é˜Ÿåˆ—å·²æ»¡ï¼Œä¸¢å¼ƒæ¶ˆæ¯\n", nodeID)
		}
	}
}

// Close å…³é—­å®¢æˆ·ç«¯
func (bc *BroadcastClient) Close() {
	log.Printf("ğŸ”Œ [Push-Manager] å…³é—­å®¢æˆ·ç«¯: %s\n", bc.serverID)
	bc.cancel()
	close(bc.broadcastChan)

	if bc.conn != nil {
		bc.conn.Close()
	}
	log.Printf("âœ… [Push-Manager] å®¢æˆ·ç«¯å·²å…³é—­: %s\n", bc.serverID)
}

// cleanupAllClients æ¸…ç†æ‰€æœ‰å®¢æˆ·ç«¯
func (s *PushManagerServer) cleanupAllClients() {
	for nodeID, client := range s.broadCastClientMap {
		log.Printf("ğŸ§¹ [Push-Manager] æ¸…ç†å®¢æˆ·ç«¯: %s\n", nodeID)
		client.Close()
	}
	s.broadCastClientMap = make(map[string]*BroadcastClient)
}

// ========== RPC æ–¹æ³•å®ç° ==========

// Broadcast å®ç° PushServer çš„ Broadcast æ–¹æ³•
func (s *PushManagerServer) Broadcast(ctx context.Context, req *broadcast.BroadCastReq) (*broadcast.BroadCastReply, error) {
	log.Printf("ğŸ“¡ [Push-Manager] æ”¶åˆ°å¹¿æ’­è¯·æ±‚\n")

	// å°†æ¶ˆæ¯åŠ å…¥æ‰€æœ‰ Connect-Node çš„é˜Ÿåˆ—
	s.EnqueueBroadcastMsg(req)

	return &broadcast.BroadCastReply{
		Code: "0",
		Msg:  "OK",
		Desc: "æ¶ˆæ¯å·²åŠ å…¥æ¨é€é˜Ÿåˆ—",
	}, nil
}
